20240902_index.html_update

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240615_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/06/15)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240902_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/09/02)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -199,7 +199,8 @@ Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO
 				  <div class="sign3" style="display: inline-block;">W</div>
 				  <div class="sign1" style="display: inline-block;float: left;">N</div>
 				  <div class="sign2" style="display: inline-block;float: left;">E</div>
-				  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2306.14955" style="text-decoration:none;color:var(--font-color)">"Bosonization of Non-Fermi Liquids"</a>
+				  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2306.14955" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids
+"</a>
 									</span>
 								<span class="cvperiod"></span></div>
 								<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=UwP0OJ8AAAAJ" style="text-decoration:none;color:var(--font-color)">F&eacute;lix Desrochers</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
@@ -547,21 +548,17 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</div>
 	<div class="cvitemize"> <a id="invited" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Invited Talks</a> </div>
 	<ul><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Condensed Matter Seminar at Simon Fraser University </span>
+  <div class="shadow"></div></div>--> Condensed Matter Seminar at Simon Fraser University </span>
 	<span class="cvperiod">May 2023</span>
 	</div>
 	<div class="cvitemcontent"> <a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
 	</li><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-  <div class="sign3" style="display: inline-block;">W</div>
-  <div class="sign1" style="display: inline-block;float: left;">N</div>
-  <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Condensed Matter Seminar at University of Cincinnati (Zoom)</span>
+	<span class="cvitem"> Condensed Matter Seminar at University of Cincinnati (Zoom)</span>
 	<span class="cvperiod">May 2023</span>
 	</div>
 	<div class="cvitemcontent"> "Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" </div>	
@@ -573,33 +570,31 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	<div class="cvitemcontent"> "Emergence of Supersymmetry from spin-lattice coupling" </div>	
 
 	</li></ul>
+	
+<!--	
+
+	-->
+	
 	<div class="cvitemize"> <a id="contributed" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Contributed Talks and Posters</a> </div>
-		<ul><li><div><div style="display: flex;">
+		<ul>
+		<li><div>
 		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> APS March Meeting 2024 (Talk) </span></div>
+  <div class="shadow"></div></div> APS March Meeting 2024 (Talk) </span>
 		<span class="cvperiod">March 2024</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5">"Bosonization of Non-Fermi Liquids"</a> </div>	
 
-		</li><li><div><div style="display: flex;">
-		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-  <div class="sign3" style="display: inline-block;">W</div>
-  <div class="sign1" style="display: inline-block;float: left;">N</div>
-  <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023) (Poster) </span></div>
+		</li><li><div>
+		<span class="cvitem"> International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023) (Poster) </span>
 		<span class="cvperiod">July 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://www.sces2023.org/">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
-		</li><li><div><div style="display: flex;">
-		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-  <div class="sign3" style="display: inline-block;">W</div>
-  <div class="sign1" style="display: inline-block;float: left;">N</div>
-  <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> ASG Mini-workshop (Talk) </span></div>
+		</li><li><div>
+		<span class="cvitem"> ASG Mini-workshop (Talk) </span>
 		<span class="cvperiod">June 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
