20240903_accepted_paper_update

--- a/index.html
+++ b/index.html
@@ -79,9 +79,21 @@ MathJax = {
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	<br>
 	ㅡㅛ am SangEun Han and a postdoctoral fellow in Yong Baek Kim's Quantum Condensed Matter Theory group in University of Toronto. My research theme is  understanding strongly correlated systems, in particular, by using quantum field theory.<br><br>-->
 <!-- NEWS -->
+<!--	<style>
+	  ul li {
+	    border-bottom: 0.25px solid #FFFFFF; /* 실선의 굵기를 0.5px로 설정 */
+	    padding: 0px 0; /* 위아래 여백 추가 */
+	  }
+
+	  ul li:last-child {
+	    border-bottom: none; /* 마지막 항목 아래에는 실선 없음 */
+	  }
+	</style>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	--></li>
+			<li><b>[Sep. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been accepted on <span style="font-style: italic;">Physical Review B</span>!
+		</li>
 		<li><b>[Jun. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2406.01681" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been posted on arXiv!
 				</li>
 		<li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
@@ -121,7 +133,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240902_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/09/02)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240903_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/09/03)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -151,13 +163,13 @@ Articles related to my works:
 			  <div class="sign3" style="display: inline-block;">W</div>
 			  <div class="sign1" style="display: inline-block;float: left;">N</div>
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
-			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2406.01681" style="text-decoration:none;color:var(--font-color)">"
+			  <div class="shadow"></div></div>&nbsp<a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1" style="text-decoration:none;color:var(--font-color)">"
 Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking
 "</a>
 								</span>
 							<span class="cvperiod"></span></div>
 							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
-						<a href="https://arxiv.org/abs/2406.01681">arXiv:2406.01681</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+						<a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1">Accepted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2406.01681">arXiv:2406.01681</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 			  <label>
 			    <input type="checkbox">
 			  </label>
