--- a/index.html
+++ b/index.html
@@ -165,7 +165,16 @@ Articles related to my works:
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
 			  <div class="shadow"></div></div>&nbsp<a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1" style="text-decoration:none;color:var(--font-color)">"
 Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking
-"</a>
+"</a> <div class="bouncing-text" style="display: inline-block;">
+		  <div class="iPsign1" style="display: inline-block;float: left;">I</div>
+		  <div class="iPsign2" style="display: inline-block;float: left;">N</div>
+		  <div class="iPsign3" style="display: inline-block;float: left;">&nbsp</div>
+		  <div class="iPsign4" style="display: inline-block;float: left;">P</div>
+		  <div class="iPsign5" style="display: inline-block;float: left;">R</div>
+		  <div class="iPsign6" style="display: inline-block;float: left;">E</div>
+		  <div class="iPsign7" style="display: inline-block;float: left;">S</div>
+		  <div class="iPsign8" style="display: inline-block;float: left;">S</div>
+		  <div class="shadow"></div>
 								</span>
 							<span class="cvperiod"></span></div>
 							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
