20240906_daily_arxiv_update

--- a/arxiv/2024_09_arxiv.html
+++ b/arxiv/2024_09_arxiv.html
@@ -44,6 +44,30 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20240902</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.17325">https://arxiv.org/abs/2408.17325</a></span> Impact of ChatGPT on the writing style of condensed matter physicists ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.16983">https://arxiv.org/abs/2408.16983</a></span> Dirac bilinears in condensed matter physics: Relativistic correction for observables and conjugate electromagnetic fields ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.17447">https://arxiv.org/abs/2408.17447</a></span> Signatures of topology in generic transport measurements for Rarita-Schwinger-Weyl semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06608">https://arxiv.org/abs/2406.06608</a></span> The Prompt Report: A Systematic Survey of Prompting Techniques *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.16915">https://arxiv.org/abs/2408.16915</a></span> SOLAX: A Python solver for fermionic quantum systems with neural network support</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.17117">https://arxiv.org/abs/2408.17117</a></span> Efficient and systematic calculation of arbitrary observables for the matrix product state excitation ansatz</p>
+<p class="p2"><br></p>
+<p class="p1">20240904</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02107">https://arxiv.org/abs/2409.02107</a></span> Highly complex novel critical behavior from the intrinsic randomness of quantum mechanical measurements on critical ground states - a controlled renormalization group analysis (Andreas W. W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.01294">https://arxiv.org/abs/2409.01294</a></span> De Broglie-Bohm Quantum Mechanics ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.00223">https://arxiv.org/abs/2409.00223</a></span> Nonreciprocal Josephson current through a conical magnet (Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20240905</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02166">https://arxiv.org/abs/2409.02166</a></span> Boundary SymTFT (Sakura Sch ̈afer-Nameki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02315">https://arxiv.org/abs/2409.02315</a></span> Revisiting the symmetry-resolved entanglement for non-invertible symmetries in 1+1d conformal field theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02737">https://arxiv.org/abs/2409.02737</a></span> Nevanlinna Analytic Continuation for Migdal-Eliashberg Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02806">https://arxiv.org/abs/2409.02806</a></span> A Non-Invertible Symmetry-Resolved Affleck-Ludwig-Cardy Formula and Entanglement Entropy from the Boundary Tube Algebra (Yichul Choi, Brandon C. Rayhaun, Yunqin Zheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02316">https://arxiv.org/abs/2409.02316</a></span> (Pre-) Modern (Non-) Fermi Liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02161">https://arxiv.org/abs/2409.02161</a></span> An Introduction to the Weak Gravity Conjecture *****</p>
+<p class="p2"><br></p>
+<p class="p1">20240906</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02990">https://arxiv.org/abs/2409.02990</a></span> Progress in Trapped-Ion Quantum Simulation ***** (Michael Foss-Feig, Guido Pagano, Andrew C. Potter, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06698">https://arxiv.org/abs/2406.06698</a></span> Ferromagnets, an New Anomaly, Instantons, and (noninvertible) Continuous Translations ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.03117">https://arxiv.org/abs/2409.03117</a></span> MATHEMATICAL IDEAS AND NOTIONS OF QUANTUM FIELD THEORY *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
