20240915_arxiv_publication_update

--- a/arxiv/2024_09_arxiv.html
+++ b/arxiv/2024_09_arxiv.html
@@ -68,6 +68,47 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.02990">https://arxiv.org/abs/2409.02990</a></span> Progress in Trapped-Ion Quantum Simulation ***** (Michael Foss-Feig, Guido Pagano, Andrew C. Potter, Norman Y. Yao)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.06698">https://arxiv.org/abs/2406.06698</a></span> Ferromagnets, an New Anomaly, Instantons, and (noninvertible) Continuous Translations ***** (Nathan Seiberg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.03117">https://arxiv.org/abs/2409.03117</a></span> MATHEMATICAL IDEAS AND NOTIONS OF QUANTUM FIELD THEORY *****</p>
+<br>
+<p class="p1">20240909</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.03971">https://arxiv.org/abs/2409.03971</a></span> Theory of Field-Angle-Resolved Magnetoacoustic Resonance in Spin-Triplet Systems for Application to Nitrogen-Vacancy Centers in Diamond ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04211">https://arxiv.org/abs/2409.04211</a></span> Topological Quantum Materials with Kagome Lattice ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.03825">https://arxiv.org/abs/2409.03825</a></span> Higher-Rank Spin Liquids and Spin Nematics from Competing Orders in Pyrochlore Magnets ** (Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04061">https://arxiv.org/abs/2409.04061</a></span> Classical Z2 spin liquid on the generalized four-color Kitaev model **** (Han Yan)</p>
+<p class="p2"><br></p>
+<p class="p1">20240910</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04899">https://arxiv.org/abs/2409.04899</a></span> LECTURES ON STATISTICAL MECHANICS ***** (Allan N. Kaufman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04917">https://arxiv.org/abs/2409.04917</a></span> Nodal Nematic Superconductivity in Multiple-Flat-Band Land *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04811">https://arxiv.org/abs/2409.04811</a></span> Supersymmetry in the Seiberg-Witten Theory: A Window into Quantum Field Theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04520">https://arxiv.org/abs/2409.04520</a></span> Charge ordering and spontaneous topological Hall effect in bilayer skyrmion crystals *** (Andrew Hardy, Anjishnu Bose, Tanmay Grover, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04525">https://arxiv.org/abs/2409.04525</a></span> Fractons on curved spacetime in 2 + 1 dimensions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.04627">https://arxiv.org/abs/2409.04627</a></span> Large-N SU(4) Schwinger boson theory for coupled-dimer antiferromagnets ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.05852">https://arxiv.org/abs/2409.05852</a></span> Nonabelian Anyon Condenstion in 2+1d topological orders: A String-Net Model Realization (Yidun Wan)</p>
+<p class="p2"><br></p>
+<p class="p1">20240911</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.06113">https://arxiv.org/abs/2409.06113</a></span> Effect of noise on quantum circuit realization of non-Hermitian time crystals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.06236">https://arxiv.org/abs/2409.06236</a></span> Ocneanu Algebra of Seams: Critical Unitary E6 RSOS Lattice Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.06647">https://arxiv.org/abs/2409.06647</a></span> Duality via Sequential Quantum Circuit in the Topological Holography Formalism ***** (Robijn Vanhove, Vibhu Ravindran, David T. Stephen, Xiao-Gang Wen, Xie Chen)</p>
+<p class="p2"><br></p>
+<p class="p1">20240912</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.05842">https://arxiv.org/abs/2406.05842</a></span> Replica symmetry breaking in spin glasses in the replica-free Keldysh formalism *** (Subir Sachdev, Sebastian Diehl)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.13390">https://arxiv.org/abs/2312.13390</a></span> Dimer piling problems and interacting field theory *** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.00605">https://arxiv.org/abs/2312.00605</a></span> Edge modes, extended TQFT, and measurement based quantum computation *** (Gabriel Wong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07068">https://arxiv.org/abs/2409.07068</a></span> Fully-Optimized Quantum Metrology: Framework, Tools, and Applications ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07043">https://arxiv.org/abs/2409.07043</a></span> Deviations from maximal entanglement for eigenstates of the Sachdev-Ye-Kitaev model *** (Yichen Huang, Yi Tan, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.06780">https://arxiv.org/abs/2409.06780</a></span> Concomitant Entanglement and Control Criticality Driven by Collective Measurements (Justin H. Wilson, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07047">https://arxiv.org/abs/2409.07047</a></span> Population Dynamics of Schr ̈odinger Cats (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07108">https://arxiv.org/abs/2409.07108</a></span> Spontaneous symmetry breaking in a SO(3) non-Abelian lattice gauge theory in 2 + 1D with quantum algorithms ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.06779">https://arxiv.org/abs/2409.06779</a></span> Theory of Topological Superconductivity and Antiferromagnetic Correlated Insulators in Twisted Bilayer WSe2 (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07126">https://arxiv.org/abs/2409.07126</a></span> Low-energy critical behavior in two-dimensional tilted semi-Dirac semimetals driven by fermion-fermion interactions</p>
+<p class="p2"><br></p>
+<p class="p1">20240913</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07516">https://arxiv.org/abs/2409.07516</a></span> Quantum thermalization of translation-invariant systems at high temperature ***** (Sau ́l Pilatowsky-Cameo, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.08127">https://arxiv.org/abs/2409.08127</a></span> A Riemannian Approach to the Lindbladian Dynamics of a Locally Purified Tensor Network</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07512">https://arxiv.org/abs/2409.07512</a></span> Variational wavefunction for Mott insulator at finite U using ancilla qubits (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07544">https://arxiv.org/abs/2409.07544</a></span> Fusion of Low-Entanglement Excitations in 2D Toric Code (Xie Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03435">https://arxiv.org/abs/2311.03435</a></span> Signatures of hidden octupolar order from nonlinear Hall effects (Sopheak Sorn, Adarsh S. Patri)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07597">https://arxiv.org/abs/2409.07597</a></span> Introduction to Bell’s inequality in Quantum Mechanics *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2401.10165">https://arxiv.org/abs/2401.10165</a></span> Anomalies and gauging of U(1) symmetries</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
